Fix stretched images in lightbox.
Add `object-fit: contain` to make sure images are never stretched in the
lightbox. This is a short term fix, since we plan on removing the image
viewer code.

--- a/extensions/amp-image-viewer/0.1/amp-image-viewer.css
+++ b/extensions/amp-image-viewer/0.1/amp-image-viewer.css
@@ -16,6 +16,7 @@
 
  .i-amphtml-image-viewer-image {
   position: absolute;
+  object-fit: contain;
 }
 
 .i-amphtml-image-viewer {
